metadata/force-app/main/default/objects/Account/fields/In_Success_Review__c.field-meta.xml
<CustomField>
    <fullName>In_Success_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Success Review</label>
    <type>Checkbox</type>
</CustomField>