metadata/force-app/main/default/objects/Account/fields/Picklist_Test__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Test__c</fullName>
    <label>Picklist Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>MAYBE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>