metadata/force-app/main/default/objects/Account/recordTypes/test.recordType-meta.xml
<RecordType>
    <fullName>test</fullName>
    <active>true</active>
    <description>Changes have been made to the record type</description>
    <label>test</label>
</RecordType>