metadata/force-app/main/default/objects/Account/recordTypes/test2.recordType-meta.xml
<RecordType>
    <fullName>test2</fullName>
    <active>true</active>
    <label>test2</label>
</RecordType>